[package]
name = "jomo"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.4"
oauth2 = "4.4.2"
thiserror = "1.0.61"
anyhow = "1.0.86"
sled = "0.34.7"
chrono = { version = "0.4.38", features = ["serde"] }
rodio = "0.18.1"
rusty_ytdl = "0.7.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
