[package]
name = "jomo"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.4"
oauth2 = "4.4.2"
thiserror = "1.0.61"
anyhow = "1.0.86"
sled = "0.34.7"
chrono = { version = "0.4.38", features = ["serde"] }
rodio = "0.18.1"
rand = "0.8.5"
rusty_ytdl = "0.7.3"
diesel = { version = "2.2.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
tauri-plugin-process = "2.0.0-rc.0"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-notification = "2.0.0-rc.2"
tauri-plugin-shell = "2.0.0-rc.2"
tauri-plugin-http = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.2"
tauri-plugin-os = "2.0.0-rc.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc.1"
